--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,28 @@
             <version>2.9</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins.workflow</groupId>
+            <artifactId>workflow-cps</artifactId>
+            <version>2.11</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
+
     <parent>
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
-        <version>3.4</version>
+        <version>3.30</version>
         <relativePath />
     </parent>
+
     <groupId>io.jenkins.plugins.testing</groupId>
     <artifactId>testrunner</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
     <properties>
         <jenkins.version>2.7.3</jenkins.version>
-        <java.level>7</java.level>
+        <java.level>8</java.level>
     </properties>
     <name>TODO Plugin</name>
     <description>TODO</description>
