Fix incorrect resolution of local paths and robustness
Fix incorrect resolution of file paths on Jenkins agents.
Skip coverage report generation if no test dlls were matched.
Add unit tests.
Refactoring of step setup code.

--- a/.gitignore
+++ b/.gitignore
@@ -34,12 +34,11 @@ buildNumber.properties
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files # (except zip which is needed for test-only artifacts)
 *.jar
 *.war
 *.nar
 *.ear
-*.zip
 *.tar.gz
 *.rar
 
