--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <name>DotCover</name>
     <description>DotCover Runner Plugin</description>
@@ -25,7 +24,7 @@
         <groupId>org.jenkins-ci.plugins</groupId>
         <artifactId>plugin</artifactId>
         <version>3.47</version>
-        <relativePath/>
+        <relativePath />
     </parent>
 
     <properties>
@@ -36,7 +35,7 @@
 
     <groupId>io.jenkins.plugins.testing</groupId>
     <artifactId>dotcover</artifactId>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.0.2</version>
     <packaging>hpi</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -184,7 +183,8 @@
 
     <scm>
         <developerConnection>scm:git:git@git.3shape.local:jenkins/plugins/threeshape.jenkins.dotcover.git</developerConnection>
-    </scm>
+      <tag>v1.0.2</tag>
+  </scm>
 
     <repositories>
         <repository>
