--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <groupId>io.jenkins.plugins.testing</groupId>
     <artifactId>dotcover</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -183,7 +183,7 @@
 
     <scm>
         <developerConnection>scm:git:git@git.3shape.local:jenkins/plugins/threeshape.jenkins.dotcover.git</developerConnection>
-      <tag>v1.0.2</tag>
+      <tag>HEAD</tag>
   </scm>
 
     <repositories>
