--- a/src/test/resources/io/jenkins/plugins/testing/VsTestTest.yml
+++ b/src/test/resources/io/jenkins/plugins/testing/VsTestTest.yml
@@ -3,3 +3,8 @@ tool:
     installations:
       - name: "DEFAULT"
         home: 'C:\Program Files (x86)\Microsoft Visual Studio\2017\Professional\Common7\IDE\CommonExtensions\Microsoft\TestWindow\vstest.console.exe'
+
+  dotcoverinstallation:
+    installations:
+      - name: "Default"
+        home: 'C:\Program Files\DotCover\dotcover.exe'
