Refactoring and tests
Add more tests.
Refactor existing tests.

--- a/src/test/resources/io/jenkins/plugins/testing/jenkins_global_excludes.yml
+++ b/src/test/resources/io/jenkins/plugins/testing/jenkins_global_excludes.yml
@@ -1,3 +1,7 @@
+unclassified:
+  dotCoverConfiguration:
+    mandatoryExcludedAssemblies: "*.Core;*.DongleSystem;*.FocusScanShared;*Test*;FluentAssertions;SlimDX;MathNet.Numerics"
+
 tool:
   vstestinstallation:
     installations:
