--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 
     <groupId>io.jenkins.plugins.testing</groupId>
     <artifactId>dotcover</artifactId>
-    <version>1.0.6-SNAPSHOT</version>
+    <version>1.0.6</version>
     <packaging>hpi</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -203,7 +203,7 @@
 
     <scm>
         <developerConnection>scm:git:git@git.3shape.local:jenkins/plugins/threeshape.jenkins.dotcover.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>v1.0.6</tag>
   </scm>
 
     <repositories>
