--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
 
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>dotcoverrunner</artifactId>
+    <url>https://github.com/jenkinsci/dotcoverrunner-plugin</url>
     <version>1.0.7-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
