--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>dotcoverrunner</artifactId>
     <url>https://github.com/jenkinsci/dotcoverrunner-plugin</url>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.0.7</version>
     <packaging>hpi</packaging>
 
     <modelVersion>4.0.0</modelVersion>
@@ -183,7 +183,7 @@
         <connection>scm:git:git://github.com/jenkinsci/dotcoverrunner-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/dotcoverrunner-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/dotcoverrunner-plugin</url>
-        <tag>HEAD</tag>
+        <tag>dotcoverrunner-1.0.7</tag>
     </scm>
 
     <repositories>
