--- a/pom.xml
+++ b/pom.xml
@@ -146,7 +146,7 @@
                 <groupId>org.hamcrest</groupId>
                 <artifactId>hamcrest-core</artifactId>
                 <version>2.2</version>
-                <scope>test</test>
+                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
