--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,6 @@
 
     <properties>
         <jenkins.version>2.346.3</jenkins.version>
-        <java.level>8</java.level>
     </properties>
 
     <groupId>io.jenkins.plugins</groupId>
@@ -151,8 +150,8 @@
             </dependency>
             <dependency>
                 <groupId>io.jenkins.tools.bom</groupId>
-                <artifactId>bom-2.176.x</artifactId>
-                <version>3</version>
+                <artifactId>bom-2.346.x</artifactId>
+                <version>1607.va_c1576527071</version>
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
