--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,10 @@
     </parent>
 
     <properties>
-        <jenkins.version>2.346.3</jenkins.version>
+         <jenkins.version>2.346.3</jenkins.version>
+         <java.level>8</java.level>
+         <spotbugs.effort>Max</spotbugs.effort>
+         <spotbugs.failOnError>true</spotbugs.failOnError>
     </properties>
 
     <groupId>io.jenkins.plugins</groupId>
