use ssh protocol in the connection

--- a/pom.xml
+++ b/pom.xml
@@ -189,7 +189,7 @@
     </build>
 
     <scm>
-        <connection>scm:git:git://github.com/jenkinsci/dotcoverrunner-plugin.git</connection>
+        <connection>git@github.com:jenkinsci/dotcoverrunner-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/dotcoverrunner-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/dotcoverrunner-plugin</url>
         <tag>HEAD</tag>
