--- a/pom.xml
+++ b/pom.xml
@@ -125,6 +125,12 @@
             <artifactId>xmlunit-matchers</artifactId>
             <version>2.6.3</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
